# study-gcp

./: LICENSE
study01_dataproc/01/: README.md  create_cluster.sh  delete_cluster.sh
study01_dataproc/02/simple_use_dataproc/: README.md  create_gcs_bucket.sh  main.py  pyproject.toml
study01_dataproc/02/simple_use_dataproc/pyspark/simple/: pyspark01.py  pyspark02.py
